read from static json

--- a/src/content/blog/public-portfolio.mdx
+++ b/src/content/blog/public-portfolio.mdx
@@ -5,7 +5,7 @@ pubDate: "April 1 2024"
 ---
 
 
-What differentiates an investor and an economist is that one bears real financial consequences while the other may operate with theoretical detachment. Any opinion on markets would only carry weight when the talking head has a sizable stake backing it - when the person has "skin in the game". 
+Any opinion on markets would only carry weight when the talking head has a sizable stake backing it - when the person has "skin in the game". 
 
 To uphold this principle, I have setup a new public portfolio that would provide transparency of the "diff" between what I pitch and what I do.
 
@@ -20,4 +20,5 @@ Investment mandate of the public portfolio :
 5. Shares will only be sold when companies have realized fair value.
 6. Diversify across 8-16 holdings at all times.
 
+[The Public Portfolio](../portfolio)
 
