added industry and ideas-for-2024

--- a/src/content/blog/public-portfolio.mdx
+++ b/src/content/blog/public-portfolio.mdx
@@ -15,10 +15,11 @@ Investment mandate of the public portfolio :
 
 1. Initial portfolio size will be approximately ~21,000 USD.
 2. Monthly inflows approximately ~6,300 USD from April 2024 - September 2024 as a form of Dollar Cost Averaging. 
-3. A detailed portfolio report will be created for each half of the year.
+3. The fund will invest primarily in the equity securities of companies.
 4. Option contracts if purchased will be solely for hedging purposes, not for speculation purposes.
 5. Shares will only be sold when companies have realized fair value.
-6. Diversify across 8-16 holdings at all times.
+6. The fund will have no more than 30% of its total assets invested in any single sector, as defined by the Global Industry Classification Standard (GICS).
+7. Diversify across 8-16 individual equity securities at all times.
 
 [The Public Portfolio](../portfolio)
 
